# uim-toolbar-qt6-lxqtapplet

./: .gitmodules  CMakeLists.txt  README  README.md  cmake_uninstall.cmake.in  plugin.desktop  plugin.qrc  resources.prc  uim-toolbar-qt6-lxqtapplet.desktop  uim-toolbar-qt6-lxqtwidget.desktop  update-uim.sh
src/: extendedquimtoolbar.cpp  extendedquimtoolbar.h  main.cpp  toolbarapplet.cpp  toolbarapplet.h  uim-toolbar-qt6-lxqtapplet.json  uim-toolbar-qt6-lxqtwidget.json  uimhelperclient.cpp  uimhelperclient.h  uimtoolbarplugin.cpp  uimtoolbarplugin.h  uimtoolbarwidget.cpp  uimtoolbarwidget.h
